Add dates to form, plus some labels / i18n keys

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -20,11 +20,24 @@
     "group.school.Teacher": "Tous les enseignants de l'{0}.",
     "group.school.Guest": "Tous les invités de l'{0}.",
     "plus": "Plus",
+    "Guest": "Invité",
+    "Relative": "Parent",
+    "Personnel": "Personnel",
+    "Student": "Élève",
+    "Teacher": "Enseignant",
+    "ACTIVATION" : "Comptes activés",
+    "LOGIN": "Connexions",
+    "ACCESS": "Accès à une application",
+    "UNIQUE_VISITORS": "Visiteurs uniques",
     "statistics.title": "Statistiques",
     "statistics.form.school": "Etablissement",
     "statistics.form.indicator": "Indicateur",
-    "statistics.form.module": "Service",
+    "statistics.form.module": "Application",
     "statistics.form.display.chart": "Afficher le diagramme",
     "statistics.form.export.to.csv" : "Exporter au format csv",
-    "statictics.no.data.found": "Les critères que vous avez choisis ne renvoient aucune donnée."
+    "statistics.form.from": "Du",
+    "statistics.form.to": "au",
+    "statictics.no.data.found": "Les critères que vous avez choisis ne renvoient aucune donnée.",
+    "statistics.invalid.dates": "La date de fin doit être supérieure à la date de début.",
+    "statistics.chart.separate.by.profile": "Séparer par profil"
 }
