Display month instead of date. Use app.displayname instead of app.name

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -35,8 +35,8 @@
     "statistics.form.module": "Application",
     "statistics.form.display.chart": "Afficher le diagramme",
     "statistics.form.export.to.csv" : "Exporter au format csv",
-    "statistics.form.from": "Du",
-    "statistics.form.to": "au",
+    "statistics.form.from": "De",
+    "statistics.form.to": "à",
     "statictics.no.data.found": "Les critères que vous avez choisis ne renvoient aucune donnée.",
     "statistics.invalid.dates": "La date de fin doit être supérieure à la date de début.",
     "statistics.chart.separate.by.profile": "Séparer par profil",
