--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -44,5 +44,6 @@
     "statistics.number.of.to.module": "Nombre d'{0} à l'application {1}",
     "statistics.for.school": "pour l'établissement {0}",
     "statistics.for.my.schools": "pour tous mes établissements",
-    "statistics.all.my.schools": "Tous mes établissements"
+    "statistics.all.my.schools": "Tous mes établissements",
+    "yesterday" : "hier"
 }
