Format data for CSV export

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -45,5 +45,6 @@
     "statistics.for.school": "pour l'établissement {0}",
     "statistics.for.my.schools": "pour tous mes établissements",
     "statistics.all.my.schools": "Tous mes établissements",
+    "statistics.profile": "profil",
     "yesterday" : "hier"
 }
