i18n keys for access-modules that are not apps

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -25,7 +25,9 @@
     "Personnel": "Personnel",
     "Student": "Élève",
     "Teacher": "Enseignant",
-    "ACTIVATION" : "Comptes activés",
+    "AdminConsole": "Console d'administration",
+    "Annuaire": "Annuaire",
+    "ACTIVATION": "Comptes activés",
     "LOGIN": "Connexions",
     "ACCESS": "Accès",
     "UNIQUE_VISITORS": "Visiteurs uniques",
