i18n : change label for indicator ACTIVATION

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -27,7 +27,7 @@
     "Teacher": "Enseignant",
     "AdminConsole": "Console d'administration",
     "Annuaire": "Annuaire",
-    "ACTIVATION": "Comptes activés",
+    "ACTIVATION": "Activations de compte",
     "LOGIN": "Connexions",
     "ACCESS": "Accès",
     "UNIQUE_VISITORS": "Visiteurs uniques",
