--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -39,10 +39,10 @@
     "statistics.form.export.to.csv" : "Exporter au format csv",
     "statistics.form.from": "De",
     "statistics.form.to": "à",
-    "statictics.no.data.found": "Les critères que vous avez choisis ne renvoient aucune donnée.",
+    "statictics.no.data.found": "Il n'y a pas de résultat pour votre sélection.",
     "statistics.invalid.dates": "La date de fin doit être supérieure à la date de début.",
     "statistics.initialization.error" : "Erreur durant l'initialisation de l'application",
-    "statistics.chart.separate.by.profile": "Séparer par profil",
+    "statistics.chart.separate.by.profile": "Répartition par profil",
     "statistics.number.of": "Nombre de {0}",
     "statistics.number.of.with.apostrophe": "Nombre d'{0}",
     "statistics.number.of.to.module": "Nombre d'{0} à l'application {1}",
