--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -39,6 +39,8 @@
     "statistics.form.export.to.csv" : "Exporter au format csv",
     "statistics.form.from": "De",
     "statistics.form.to": "à",
+    "statistics.form.processing": "Traitement en cours...",
+    "statistics.form.to.applications": "aux applications",
     "statictics.no.data.found": "Il n'y a pas de résultat pour votre sélection.",
     "statistics.invalid.dates": "La date de fin doit être supérieure à la date de début.",
     "statistics.initialization.error" : "Erreur durant l'initialisation de l'application",
