Allow user to select 'all modules' for indicator 'ACCESS'. Add module and school name in CSV file

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -53,5 +53,6 @@
     "statistics.all.my.schools": "Tous mes établissements",
     "statistics.export.profile": "profil",
     "statistics.export.structure": "établissement",
+    "statistics.export.module": "application",
     "yesterday" : "hier"
 }
