Chart tooltip : display singular label, if indicatorCount == 1

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -28,9 +28,13 @@
     "AdminConsole": "Console d'administration",
     "Annuaire": "Annuaire",
     "ACTIVATION": "Activations de compte",
+    "ACTIVATION.singular": "Activation de compte",
     "LOGIN": "Connexions",
+    "LOGIN.singular": "Connexion",
     "ACCESS": "Accès",
+    "ACCESS.singular": "Accès",
     "UNIQUE_VISITORS": "Visiteurs uniques",
+    "UNIQUE_VISITORS.singular": "Visiteur unique",
     "statistics.title": "Statistiques",
     "statistics.form.school": "Etablissement",
     "statistics.form.indicator": "Indicateur",
