--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -57,6 +57,12 @@
     "statistics.for.school": "pour l'établissement {0}",
     "statistics.for.my.schools": "pour tous mes établissements",
     "statistics.all.my.schools": "Tous mes établissements",
+    "statistics.bad.request.invalid.schools": "Etablissement(s) sélectionné(s) invalide(s)",
+    "statistics.bad.request.invalid.indicator": "Indicateur invalide",
+    "statistics.bad.request.invalid.module": "Application invalide",
+    "statistics.bad.request.invalid.dates": "La date de fin doit être supérieure à la date de début.",
+    "statistics.bad.request.invalid.date.format": "Les dates doivent être renseignées au format 'timestamp unix' (nombre de secondes depuis le 01/01/1970).",
+    "statistics.bad.request.invalid.export.format": "Le format demandé pour l'export de données n'est pas supporté.",
     "csv.profile": "Profil",
     "csv.structure": "Etablissement",
     "csv.city": "Commune",
