#4689 Activated accounts : update i18n, mongo query and controller initialization

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -27,6 +27,8 @@
     "Teacher": "Enseignant",
     "AdminConsole": "Console d'administration",
     "Annuaire": "Annuaire",
+    "ACTIVATED_ACCOUNTS": "Comptes activés",
+    "ACTIVATED_ACCOUNTS.singular": "Compte activé",
     "ACTIVATION": "Activations de compte",
     "ACTIVATION.singular": "Activation de compte",
     "LOGIN": "Connexions",
