#4689 Add column 'total number of accounts' for CSV export

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -73,5 +73,6 @@
     "csv.uai": "Rne",
     "csv.date": "Date",
     "csv.module": "Application",
+    "csv.total.number.of.accounts": "Nombre total de comptes",
     "yesterday" : "hier"
 }
