--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -60,6 +60,9 @@
     "statistics.for.my.schools": "pour tous mes établissements",
     "statistics.all.my.schools": "Tous mes établissements",
     "statistics.others": "Autres",
+    "statistics.accounts.not.activated": "Comptes non activés",
+    "statistics.accounts.activated.on": " comptes {0} activés sur ",
+    "statistics.accounts.not.activated.on": " comptes {0} non activés sur ",
     "statistics.bad.request.invalid.schools": "Etablissement(s) sélectionné(s) invalide(s)",
     "statistics.bad.request.invalid.indicator": "Indicateur invalide",
     "statistics.bad.request.invalid.module": "Application invalide",
