Anomalie #9058 : Les statistiques Leo pour le lycée ne fonctionnent pas

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -38,6 +38,12 @@
     "UNIQUE_VISITORS": "Visiteurs uniques",
     "UNIQUE_VISITORS.singular": "Visiteur unique",
     "statistics.title": "Statistiques",
+    "statistics.admin.access": "Accès aux options d'administration",
+    "statistics.admin.generate.stats": "Génération des statistiques",
+    "statistics.admin.generate": "Générer les statistiques",
+    "statistics.admin.generate.info.start": "Début de la génération. La génération peut prendre quelques minutes.",
+    "statistics.admin.generate.info.end": "Génération des statistiques terminée.",
+    "statistics.view.stats": "Consultation des statistiques",
     "statistics.form.school": "Etablissement",
     "statistics.form.indicator": "Indicateur",
     "statistics.form.module": "Application",
