[Evo] #21887 : add CONNECTOR indicator

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -37,6 +37,8 @@
     "ACCESS.singular": "Accès",
     "UNIQUE_VISITORS": "Visiteurs uniques",
     "UNIQUE_VISITORS.singular": "Visiteur unique",
+    "CONNECTOR" : "Accès aux connecteurs",
+    "CONNECTOR.singular" : "Accès au connecteur",
     "statistics.title": "Statistiques",
     "statistics.admin.access": "Accès aux options d'administration",
     "statistics.admin.generate.stats": "Génération des statistiques",
@@ -72,10 +74,12 @@
     "statistics.bad.request.invalid.schools": "Etablissement(s) sélectionné(s) invalide(s)",
     "statistics.bad.request.invalid.indicator": "Indicateur invalide",
     "statistics.bad.request.invalid.module": "Application invalide",
+    "statistics.bad.request.invalid.connector" : "Connecteur invalide",
     "statistics.bad.request.invalid.dates": "La date de fin doit être supérieure à la date de début.",
     "statistics.bad.request.invalid.date.format": "Les dates doivent être renseignées au format 'timestamp unix' (nombre de secondes depuis le 01/01/1970).",
     "statistics.bad.request.invalid.export.format": "Le format demandé pour l'export de données n'est pas supporté.",
     "statistics.rename.downloaded.file.to.csv": "Renommez le fichier téléchargé en export.csv",
+    "statistics.form.connector" : "Connecteur",
     "csv.profile": "Profil",
     "csv.structure": "Etablissement",
     "csv.city": "Commune",
@@ -94,5 +98,24 @@
     "Rack":"Casier",
     "TimelineGenerator":"Générateur de ligne temporelle",
     "Workspace":"Espace de travail",
-    "Mindmap":"Carte mentale"
+    "Mindmap":"Carte mentale",
+    "UniversalisRegisteredService" : "Universalis",
+    "PronoteRegisteredService" : "Pronote",
+    "BRNERegisteredService" : "BRNE",
+    "CIDJRegisteredService" : "CIDJ",
+    "DefaultRegisteredService" : "Autres",
+    "EducagriRegisteredService" : "Educagri",
+    "EduMediaRegisteredService" : "EduMedia",
+    "EliotRegisteredService" : "Eliot",
+    "EnglishAttackRegisteredService" : "EnglishAttack",
+    "GepiRegisteredService" : "Gepi",
+    "GRRRegisteredService" : "GRRR",
+    "KneRegisteredService" : "Kne",
+    "LabomepRegisteredService" : "LabomepRegisteredService",
+    "LeSiteTvRegisteredService" : "LeSiteTv",
+    "MSELRegisteredService" : "MSEL",
+    "ProEPSRegisteredService" : "ProEPS",
+    "UidRegisteredService" : "Uid",
+    "WebclasseursRegisteredService" : "WebclasseursRegisteredService",
+    "ZimbraRegisteredService" : "Zimbra"
 }
