feat(i18n): #23910, Add 1D apps keys

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -99,6 +99,9 @@
     "TimelineGenerator":"Générateur de ligne temporelle",
     "Workspace":"Espace de travail",
     "Mindmap":"Carte mentale",
+    "Homeworks": "Cahier de texte",
+    "SchoolBook": "Carnet de liaison",
+    "Scrapbook": "Cahier Multimédia",
     "UniversalisRegisteredService" : "Universalis",
     "PronoteRegisteredService" : "Pronote",
     "BRNERegisteredService" : "BRNE",
