fix(i18n):#25329 Update some connectors labels

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -110,15 +110,15 @@
     "EducagriRegisteredService" : "Educagri",
     "EduMediaRegisteredService" : "EduMedia",
     "EliotRegisteredService" : "Eliot",
-    "EnglishAttackRegisteredService" : "EnglishAttack",
+    "EnglishAttackRegisteredService" : "English Attack",
     "GepiRegisteredService" : "Gepi",
-    "GRRRegisteredService" : "GRRR",
+    "GRRRegisteredService" : "GRR",
     "KneRegisteredService" : "Kne",
-    "LabomepRegisteredService" : "LabomepRegisteredService",
+    "LabomepRegisteredService" : "Labomep",
     "LeSiteTvRegisteredService" : "LeSiteTv",
     "MSELRegisteredService" : "MSEL",
     "ProEPSRegisteredService" : "ProEPS",
     "UidRegisteredService" : "Uid",
-    "WebclasseursRegisteredService" : "WebclasseursRegisteredService",
+    "WebclasseursRegisteredService" : "Folios",
     "ZimbraRegisteredService" : "Zimbra"
 }
