--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -3,12 +3,12 @@
     "group.AdminLocal": "Administrateurs locaux de {0}.",
     "group.Personnel": "Personnels du groupe {0}.",
     "group.Relative": "Parents du groupe {0}.",
-    "group.Student": "Elèves du groupe {0}.",
+    "group.Student": "Élèves du groupe {0}.",
     "group.Teacher": "Enseignants du groupe {0}.",
     "group.Guest": "Invités du groupe {0}.",
     "group.class.Personnel": "Personnels de la classe {0}.",
     "group.class.Relative": "Parents de la classe {0}.",
-    "group.class.Student": "Elèves de la classe {0}.",
+    "group.class.Student": "Élèves de la classe {0}.",
     "group.class.Teacher": "Enseignants de la classe {0}.",
     "group.class.Guest": "Invités de la classe {0}.",
     "group.contrib": "Contributeurs de la communauté {0}.",
@@ -16,14 +16,14 @@
     "group.read": "Lecteurs de la communauté {0}.",
     "group.school.Personnel": "Personnels de l'{0}.",
     "group.school.Relative": "Parents de l'{0}.",
-    "group.school.Student": "Elèves de l'{0}.",
+    "group.school.Student": "Élèves de l'{0}.",
     "group.school.Teacher": "Enseignants de l'{0}.",
     "group.school.Guest": "Invités de l'{0}.",
     "plus": "Plus",
     "Guest": "Invité",
     "Relative": "Parent",
     "Personnel": "Personnel",
-    "Student": "Elève",
+    "Student": "Élève",
     "Teacher": "Enseignant",
     "AdminConsole": "Console d'administration",
     "Annuaire": "Annuaire",
@@ -46,7 +46,7 @@
     "statistics.admin.generate.info.start": "Début de la génération. La génération peut prendre quelques minutes.",
     "statistics.admin.generate.info.end": "Génération des statistiques terminée.",
     "statistics.view.stats": "Consultation des statistiques",
-    "statistics.form.school": "Etablissement",
+    "statistics.form.school": "Établissement",
     "statistics.form.indicator": "Indicateur",
     "statistics.form.module": "Application",
     "statistics.form.display.chart": "Afficher le diagramme",
@@ -71,7 +71,7 @@
     "statistics.accounts.not.activated": "Comptes non activés",
     "statistics.accounts.activated.on": " comptes {0} activés sur ",
     "statistics.accounts.not.activated.on": " comptes {0} non activés sur ",
-    "statistics.bad.request.invalid.schools": "Etablissement(s) sélectionné(s) invalide(s)",
+    "statistics.bad.request.invalid.schools": "Établissement(s) sélectionné(s) invalide(s)",
     "statistics.bad.request.invalid.indicator": "Indicateur invalide",
     "statistics.bad.request.invalid.module": "Application invalide",
     "statistics.bad.request.invalid.connector" : "Connecteur invalide",
@@ -81,7 +81,7 @@
     "statistics.rename.downloaded.file.to.csv": "Renommez le fichier téléchargé en export.csv",
     "statistics.form.connector" : "Connecteur",
     "csv.profile": "Profil",
-    "csv.structure": "Etablissement",
+    "csv.structure": "Établissement",
     "csv.city": "Commune",
     "csv.uai": "Rne",
     "csv.date": "Date",
@@ -96,7 +96,7 @@
     "MindMap":"Carte mentale",
     "Poll": "Sondage",
     "Rack":"Casier",
-    "TimelineGenerator":"Générateur de ligne temporelle",
+    "TimelineGenerator":"Frise chronologique",
     "Workspace":"Espace de travail",
     "Mindmap":"Carte mentale",
     "Homeworks": "Cahier de texte",
