feat: #30218, stats for mobile app access

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -49,6 +49,7 @@
     "statistics.form.school": "Établissement",
     "statistics.form.indicator": "Indicateur",
     "statistics.form.module": "Application",
+    "statistics.form.device": "Moyen",
     "statistics.form.display.chart": "Afficher le diagramme",
     "statistics.form.export.to.csv" : "Exporter au format csv",
     "statistics.form.from": "De",
@@ -56,6 +57,9 @@
     "statistics.form.processing": "Traitement en cours...",
     "statistics.form.to.applications": "aux applications",
     "statistics.form.all.applications": "Toutes les applications",
+    "statistics.form.all.devices": "Web et Mobile",
+    "statistics.form.web.only": "Web uniquement",
+    "statistics.form.mobile.only": "Mobile uniquement",
     "statictics.no.data.found": "Il n'y a pas de résultat pour votre sélection.",
     "statistics.invalid.dates": "La date de fin doit être supérieure à la date de début.",
     "statistics.initialization.error" : "Erreur durant l'initialisation de l'application",
