feat(Statistic) Add custom indicator and Web conference module indicator

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -39,6 +39,10 @@
     "UNIQUE_VISITORS.singular": "Visiteur unique",
     "CONNECTOR" : "Accès aux connecteurs",
     "CONNECTOR.singular" : "Accès au connecteur",
+    "WebConferenceRoomCreation": "Création de salle virtuelle",
+    "WebConferenceRoomCreation.singular": "Création de salle virtuelle",
+    "WebConferenceRoomAccess": "Accès à une salle virtuelle",
+    "WebConferenceRoomAccess.singular": "Accès à une salle virtuelle",
     "statistics.title": "Statistiques",
     "statistics.admin.access": "Accès aux options d'administration",
     "statistics.admin.generate.stats": "Génération des statistiques",
