feat: #37517, add Exercizer to translation

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -101,6 +101,7 @@
     "CollaborativeWall" : "Mur collaboratif",
     "Callendar":"Calendrier",
     "Community":"Communauté",
+    "Exercizer":"Exercices",
     "MindMap":"Carte mentale",
     "Poll": "Sondage",
     "Rack":"Casier",
