--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -106,7 +106,7 @@
     "Poll": "Sondage",
     "Rack":"Casier",
     "TimelineGenerator":"Frise chronologique",
-    "Workspace":"Espace de travail",
+    "Workspace":"Espace documentaire",
     "Mindmap":"Carte mentale",
     "Homeworks": "Cahier de texte",
     "SchoolBook": "Carnet de liaison",
