feat: #45286 Add viesco modules labels

--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -111,6 +111,10 @@
     "Homeworks": "Cahier de texte",
     "SchoolBook": "Carnet de liaison",
     "Scrapbook": "Cahier Multimédia",
+    "Presences": "Présences",
+    "Competences": "Compétences",
+    "Diary": "Cahier de textes",
+    "Edt": "Emploi du temps",
     "UniversalisRegisteredService" : "Universalis",
     "PronoteRegisteredService" : "Pronote",
     "BRNERegisteredService" : "BRNE",
