feat(date): #CO-1816 get statistics up to 1 year before now

--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -20,5 +20,120 @@
     "group.school.Teacher": "Tous les enseignants de l'{0}.",
     "group.school.Guest": "Tous les invités de l'{0}.",
     "plus": "Plus",
-    "statistics.title": "Statistics"
+    "statistics.title": "Statistics",
+    "Guest": "Invité",
+    "Relative": "Parent",
+    "Personnel": "Personnel",
+    "Student": "Élève",
+    "Teacher": "Enseignant",
+    "AdminConsole": "Console d'administration",
+    "Annuaire": "Annuaire",
+    "ACTIVATED_ACCOUNTS": "Comptes activés",
+    "ACTIVATED_ACCOUNTS.singular": "Compte activé",
+    "ACTIVATION": "Activations de compte",
+    "ACTIVATION.singular": "Activation de compte",
+    "LOGIN": "Connexions",
+    "LOGIN.singular": "Connexion",
+    "ACCESS": "Accès",
+    "ACCESS.singular": "Accès",
+    "UNIQUE_VISITORS": "Visiteurs uniques",
+    "UNIQUE_VISITORS.singular": "Visiteur unique",
+    "CONNECTOR" : "Accès aux connecteurs",
+    "CONNECTOR.singular" : "Accès au connecteur",
+    "WebConferenceRoomCreation": "Création de salle virtuelle",
+    "WebConferenceRoomCreation.singular": "Création de salle virtuelle",
+    "WebConferenceRoomAccess": "Accès à une salle virtuelle",
+    "WebConferenceRoomAccess.singular": "Accès à une salle virtuelle",
+    "statistics.title": "Statistiques",
+    "statistics.admin.access": "Accès aux options d'administration",
+    "statistics.admin.generate.stats": "Génération des statistiques",
+    "statistics.admin.generate": "Générer les statistiques",
+    "statistics.admin.generate.info.start": "Début de la génération. La génération peut prendre quelques minutes.",
+    "statistics.admin.generate.info.end": "Génération des statistiques terminée.",
+    "statistics.view.stats": "Consultation des statistiques",
+    "statistics.form.school": "Établissement",
+    "statistics.form.indicator": "Indicateur",
+    "statistics.form.module": "Application",
+    "statistics.form.device": "Moyen",
+    "statistics.form.display.chart": "Afficher le diagramme",
+    "statistics.form.export.to.csv" : "Exporter au format csv",
+    "statistics.form.from": "De",
+    "statistics.form.to": "à",
+    "statistics.form.processing": "Traitement en cours...",
+    "statistics.form.to.applications": "aux applications",
+    "statistics.form.all.applications": "Toutes les applications",
+    "statistics.form.all.devices": "Web et Mobile",
+    "statistics.form.web.only": "Web uniquement",
+    "statistics.form.mobile.only": "Mobile uniquement",
+    "statictics.no.data.found": "Il n'y a pas de résultat pour votre sélection.",
+    "statistics.invalid.dates": "La date de fin doit être supérieure à la date de début.",
+    "statistics.initialization.error" : "Erreur durant l'initialisation de l'application",
+    "statistics.get.structures.error" : "Erreur : impossible d'obtenir le rne et la commune des établissements. Export CSV impossible",
+    "statistics.chart.separate.by.profile": "Répartition par profil",
+    "statistics.number.of": "Nombre de {0}",
+    "statistics.number.of.with.apostrophe": "Nombre d'{0}",
+    "statistics.number.of.to.module": "Nombre d'{0} à l'application {1}",
+    "statistics.for.school": "pour l'établissement {0}",
+    "statistics.for.my.schools": "pour tous mes établissements",
+    "statistics.all.my.schools": "Tous mes établissements",
+    "statistics.others": "Autres",
+    "statistics.accounts.not.activated": "Comptes non activés",
+    "statistics.accounts.activated.on": " comptes {0} activés sur ",
+    "statistics.accounts.not.activated.on": " comptes {0} non activés sur ",
+    "statistics.bad.request.invalid.schools": "Établissement(s) sélectionné(s) invalide(s)",
+    "statistics.bad.request.invalid.indicator": "Indicateur invalide",
+    "statistics.bad.request.invalid.module": "Application invalide",
+    "statistics.bad.request.invalid.connector" : "Connecteur invalide",
+    "statistics.bad.request.invalid.dates": "La date de fin doit être supérieure à la date de début.",
+    "statistics.bad.request.invalid.date.format": "Les dates doivent être renseignées au format 'timestamp unix' (nombre de secondes depuis le 01/01/1970).",
+    "statistics.bad.request.invalid.export.format": "Le format demandé pour l'export de données n'est pas supporté.",
+    "statistics.rename.downloaded.file.to.csv": "Renommez le fichier téléchargé en export.csv",
+    "statistics.form.connector" : "Connecteur",
+    "statistics.form.error.requirements" : "La durée demandée doit être inférieure ou égale à un an et la date de fin ne peut pas être avant la date de début.",
+    "csv.profile": "Profil",
+    "csv.structure": "Établissement",
+    "csv.city": "Commune",
+    "csv.uai": "Rne",
+    "csv.date": "Date",
+    "csv.module": "Application",
+    "csv.total.number.of.accounts": "Nombre total de comptes",
+    "yesterday" : "hier",
+    "Conversation": "Messagerie",
+    "Rbs": "Réservation de ressources",
+    "CollaborativeWall" : "Mur collaboratif",
+    "Callendar":"Calendrier",
+    "Community":"Communauté",
+    "Exercizer":"Exercices",
+    "MindMap":"Carte mentale",
+    "Poll": "Sondage",
+    "Rack":"Casier",
+    "TimelineGenerator":"Frise chronologique",
+    "Workspace":"Espace documentaire",
+    "Mindmap":"Carte mentale",
+    "Homeworks": "Cahier de texte",
+    "SchoolBook": "Carnet de liaison",
+    "Scrapbook": "Cahier Multimédia",
+    "Presences": "Présences",
+    "Competences": "Compétences",
+    "Diary": "Cahier de textes",
+    "Edt": "Emploi du temps",
+    "UniversalisRegisteredService" : "Universalis",
+    "PronoteRegisteredService" : "Pronote",
+    "BRNERegisteredService" : "BRNE",
+    "CIDJRegisteredService" : "CIDJ",
+    "DefaultRegisteredService" : "Autres",
+    "EducagriRegisteredService" : "Educagri",
+    "EduMediaRegisteredService" : "EduMedia",
+    "EliotRegisteredService" : "Eliot",
+    "EnglishAttackRegisteredService" : "English Attack",
+    "GepiRegisteredService" : "Gepi",
+    "GRRRegisteredService" : "GRR",
+    "KneRegisteredService" : "Kne",
+    "LabomepRegisteredService" : "Labomep",
+    "LeSiteTvRegisteredService" : "LeSiteTv",
+    "MSELRegisteredService" : "MSEL",
+    "ProEPSRegisteredService" : "ProEPS",
+    "UidRegisteredService" : "Uid",
+    "WebclasseursRegisteredService" : "Folios",
+    "ZimbraRegisteredService" : "Zimbra"
 }
