fix(connectorSatats) #DCN-525 add connector in stats collection

--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -119,6 +119,7 @@
     "Edt": "Emploi du temps",
     "UniversalisRegisteredService" : "Universalis",
     "PronoteRegisteredService" : "Pronote",
+    "MoodleRegisteredService" : "Moodle",
     "BRNERegisteredService" : "BRNE",
     "CIDJRegisteredService" : "CIDJ",
     "DefaultRegisteredService" : "Autres",
