--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -118,6 +118,7 @@
     "Edt": "Emploi du temps",
     "UniversalisRegisteredService" : "Universalis",
     "PronoteRegisteredService" : "Pronote",
+    "MoodleRegisteredService" : "Moodle",
     "BRNERegisteredService" : "BRNE",
     "CIDJRegisteredService" : "CIDJ",
     "DefaultRegisteredService" : "Autres",
