fix(connectors) : DCN-532 add Chat Riot and Peertube connector

--- a/src/main/resources/i18n/en.json
+++ b/src/main/resources/i18n/en.json
@@ -120,6 +120,7 @@
     "UniversalisRegisteredService" : "Universalis",
     "PronoteRegisteredService" : "Pronote",
     "MoodleRegisteredService" : "Moodle",
+    "SSOMatrix" : "Chat",
     "BRNERegisteredService" : "BRNE",
     "CIDJRegisteredService" : "CIDJ",
     "DefaultRegisteredService" : "Autres",
