--- a/src/main/resources/i18n/fr.json
+++ b/src/main/resources/i18n/fr.json
@@ -119,6 +119,7 @@
     "UniversalisRegisteredService" : "Universalis",
     "PronoteRegisteredService" : "Pronote",
     "MoodleRegisteredService" : "Moodle",
+    "SSOMatrix" : "Chat",
     "BRNERegisteredService" : "BRNE",
     "CIDJRegisteredService" : "CIDJ",
     "DefaultRegisteredService" : "Autres",
